--- a/sass/components/card/modules/_moments.scss
+++ b/sass/components/card/modules/_moments.scss
@@ -1,6 +1,6 @@
 #card-container--moments {
     .card.card--action {
         padding-top: rem(15px);
-        padding-bottom: rem(95px);
+        padding-bottom: rem(105px);
     }
 }
